[bumpversion]
commit = True
tag = True
current_version = 1.1.10
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}
	{major}.{minor}.{patch}

[metadata]
description-file = README.rst

[flake8]
max-line-length = 120
show-source = True
exclude = .venv,.git,.tox,dist,docs,*egg,build,tests

[bdist_wheel]
universal = 1

[bumpversion:file:shiba/__init__.py]

[bumpversion:part:release]
optional_value = gamma
values = 
	dev0
	gamma

